styles.css
:root {
    --main-bg-color: #EBE5F0;
    --accent-color: #7D5898;
    --sencondary-accent-color: #B7A0C8;
    --contrast-color: #D75F56;
    --text-color: #000;
}

.left_stack {
    float: left;
    width: 20%;
    height: 70%;
    background-color: var(--sencondary-accent-color);
    border-radius: 25px;
}

#list-title {
    padding-left: 20px;
}

#list-item {
    padding: 20px;
}

.profile {
    height: 20%;
    background-color: var(--accent-color);
    text-align: center;
    border-radius: 25px;
    padding: 20px;
}

img{
    width: 90%;
    height: 90%;
    border-radius: 50%;
}

.links {
    height: 100%;
}


.resume {
    overflow: auto;
    padding: 25px;
}

.content {
    overflow: auto;
}

.heading {
    float: left;
    background-color: var(--contrast-color);
    border-radius: 25px;
    width: 100%;
    height: 20%;
    display: flex;
    justify-content: left;
}

.heading div {
    padding-right: 10px;
    padding-bottom: 10px;
    display: flex;
    align-items: left;
    gap: 20px;
}

body {
    background-color: var(--main-bg-color);
}


.container {
    padding-top: 2%;
    clear: left;
    column-count: 2;
    column-gap: 30px; /* Adjust the space between columns */
    /* Optional: add a vertical line between columns */
    column-rule: 1px solid #ccc;
}

.container h1 {
    font-size: 1.5em;
    margin-bottom: 10px;
    color: var(--accent-color);
    text-decoration: underline;
}

.container p {
    padding-left: 5%;
}

.links p {
    padding-left: 5%;
}

.heading h1 {
    float: left;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
    font-size: clamp(2rem, 12vw, 6rem);
    flex: 1;
    align-self: center;
    white-space: nowrap;
    overflow: hidden;
}

.contact_info {
    float: right;
    text-align: left;
    display: flex;
    flex-direction: column;
    gap: 0;
}

.contact_info * {
    margin: 0;
    padding: 0;
}

